--- a/biblio-app/package.json
+++ b/biblio-app/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
     "vue-js-modal": "^2.0.0-rc.3",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
