--- a/biblio-app/package.json
+++ b/biblio-app/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "highcharts": "^8.1.1",
+    "highcharts-vue": "^1.3.5",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
     "vue-js-modal": "^2.0.0-rc.3",
