--- a/biblio-app/package.json
+++ b/biblio-app/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
     "vue-js-modal": "^2.0.0-rc.3",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.1.6",
     "vue-select": "^3.10.3",
     "vue-the-mask": "^0.11.1"
