--- a/biblio-app/package.json
+++ b/biblio-app/package.json
@@ -14,6 +14,7 @@
     "highcharts-vue": "^1.3.5",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
+    "vue-good-table": "^2.19.5",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.1.6",
